--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@
 
 buildscript {
   ext.kotlin_version = '1.6.0'
-  ext.library_group = "com.github.thiru1010"
+  ext.library_group = "com.github.pedroSG94"
   ext.version_code = 214
-  ext.version_name = "2.1.5"
+  ext.version_name = "2.1.6"
 
   repositories {
     google()
